# xray-16

./: .cirrus.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hg_archival.txt  .travis.yml  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTE  CONTRIBUTING.md  DEBUG.linux  Engine Changes.txt  INSTALL.linux  License.txt  OXR_CoC_splash.psd  Open X-Ray Engine.500x268.psd  OpenXRay Splash.500x268.psd  Proposed engine changes.txt  README  README.md  SETUP.linux  TODO.txt  USAGE.linux  after_build.sh  all_editors.bpg  appveyor.yml  changelog_legend.txt  cop changelog.txt  datapack.ltx  engine.sln  make_portable.sh  ppc64le-toolchain.cmake  readmeh.txt  refresh.bat  refresh_res.bat  update_bin_dbg.bat  update_bin_rel.bat  (+5 more)
misc/: CMakeLists.txt
misc/docker/: docker-compose.yml  how-to.md  login.sh  remove.sh  user.sh
misc/linux/: openxray_cop.desktop
misc/windows/: xr_pack_build.cmd  xrbinprep.cmd  xrbinup.cmd
res/: CMakeLists.txt  compile.py  fsgame.ltx  openxray.desktop  openxray_cs.desktop  openxray_plus.ltx  openxray_soc.desktop
res/_appdata_/: grading_warm.ltx
res/gamedata_COC/: .gitignore  README.md
src/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Common.props  ConfigurationDefs.props  OpenXRay.natvis  TypeHelper.natvis  all_editors.bpg  all_editors.dsk  build_config_defines.h  engine.cdproj  engine.favdoc  engine.sln  utils.cmake  xray.props  xray_build.props  xray_input.props  xray_output.props  xray_project_configuration.props  xray_project_configurations.props  xray_variables.props
src/Common/: Common.hpp  Common.vcxitems  Common.vcxitems.filters  Common.vcxproj  Common.vcxproj.filters  CommonImportExport.inl  Compiler.inl  Config.hpp  FSMacros.hpp  GUID.hpp  ImportExportMacros.inl  LevelGameDef.h  LevelStructure.hpp  Noncopyable.hpp  OGF_GContainer_Vertices.hpp  Platform.hpp  PlatformApple.inl  PlatformBSD.inl  PlatformLinux.hpp  PlatformLinux.inl  PlatformSwitch.inl  PlatformWindows.inl  RDevice.h  Util.hpp  _d3d_extensions.h  d3d9compat.hpp  face_smoth_flags.h  inlining_macros.h  object_broker.h  object_cloner.h  object_comparer.h  object_destroyer.h  object_interfaces.h  object_loader.h  object_saver.h  object_type_traits.h  xr_impexp_macros.h
src/CustomOpenFileDialog/: FormOpenFileDialog.Designer.cs  FormOpenFileDialog.resx  UserControl1.Designer.cs
src/Include/: FSMacros.hpp
src/Launcher/: Stalker-CoP.rc  Stalker-CoP.vcxproj  Stalker-CoP.vcxproj.filters  main.cpp  resource.h
src/Layers/: CMakeLists.txt
src/_CppDependOut/: InfoWarnings.xml
src/all_editors_vs/: all_editors_vs.sln  all_editors_vs.vcxproj  all_editors_vs.vcxproj.filters
src/common/: GUID.hpp  LevelStructure.hpp  Util.hpp  object_cloner.h  object_interfaces.h  object_loader.h  object_saver.h
src/dummy/: 00dummy_tester.cpp  dummy.vcxproj  dummy.vcxproj.filters
src/editor/: AssemblyInfo.cpp  editor.vcxproj  editor.vcxproj.filters  engine_include.hpp  ide_impl.cpp  property_boolean_reference.cpp  property_boolean_values_value.cpp  property_boolean_values_value.hpp  property_boolean_values_value_reference.hpp  property_collection.cpp  property_collection_base.cpp  property_collection_enumerator.cpp  property_collection_getter.hpp  property_color.cpp  property_color_base.cpp  property_color_base.hpp  property_container.cpp  property_container_converter.hpp  property_converter_float.hpp  property_converter_float_enum.cpp  property_converter_integer_enum.cpp  property_converter_integer_values.cpp  property_converter_string_values.hpp  property_converter_tree_values.hpp  property_editor_color.cpp  property_editor_color.hpp  property_editor_file_name.cpp  property_file_name_value_base.hpp  property_float.cpp  property_float_enum_value.hpp  property_float_enum_value_reference.cpp  property_float_enum_value_reference.hpp  property_float_limited.cpp  property_float_limited.hpp  property_float_limited_reference.cpp  property_float_limited_reference.hpp  property_float_reference.cpp  property_float_reference.hpp  property_holder_integer.cpp  property_integer.cpp  (+27 more)
src/editor_controls/: AssemblyInfo.cpp  editor_controls.vcxproj  editor_controls.vcxproj.filters  pch.cpp  property_incrementable.hpp  property_mouse_events.hpp  property_value.hpp
src/plugins/: xrPlugins.sln
src/utils/: CMakeLists.txt  Shader_xrLC.h  communicate.h  xrLoadSurface.cpp
src/xrAICore/: AISpaceBase.cpp  AISpaceBase.hpp  CMakeLists.txt  ScriptPCH.cpp  ScriptPCH.hpp  pch.cpp  pch.hpp  xrAICore.cpp  xrAICore.hpp  xrAICore.vcxproj  xrAICore.vcxproj.filters
src/xrCDB/: CMakeLists.txt  Frustum.cpp  Frustum.h  ISpatial.cpp  ISpatial.h  ISpatial_q_box.cpp  ISpatial_q_frustum.cpp  ISpatial_q_ray.cpp  ISpatial_verify.cpp  Intersect.hpp  OPC_AABB.cpp  OPC_AABB.h  OPC_AABBCollider.cpp  OPC_AABBCollider.h  OPC_AABBTree.cpp  OPC_AABBTree.h  OPC_BVTCache.h  OPC_BoundingSphere.h  OPC_BoxBoxOverlap.h  OPC_Collider.cpp  OPC_Collider.h  OPC_Common.h  OPC_Container.cpp  OPC_Container.h  OPC_FPU.h  OPC_Matrix3x3.cpp  OPC_Matrix3x3.h  OPC_Matrix4x4.cpp  OPC_Matrix4x4.h  OPC_MemoryMacros.h  OPC_Model.cpp  OPC_Model.h  OPC_OBB.cpp  OPC_OBB.h  OPC_OBBCollider.cpp  OPC_OBBCollider.h  OPC_OptimizedTree.cpp  OPC_OptimizedTree.h  OPC_Plane.cpp  OPC_Plane.h  (+50 more)
src/xrCPU_Pipe/: StdAfx.h  resource.h  ttapi.cpp  ttapi.h  xrBoneLerp.cpp  xrBoneLerp_3DNow!.cpp  xrCPU_Pipe.vcxproj  xrCPU_Pipe.vcxproj.filters  xrM44mul_3DNow!.cpp  xrQuatSlerp.cpp  xrSkin2W.cpp  xrSkin2W_thread.cpp
src/xrCommon/: inlining_macros.h  math_funcs.h  math_funcs_inline.h  misc_math_types.h  predicates.h  xalloc.h  xr_allocator.h  xr_array.h  xr_deque.h  xr_list.h  xr_map.h  xr_queue.h  xr_set.h  xr_smart_pointers.h  xr_stack.h  xr_string.h  xr_unordered_map.h  xr_vector.h
src/xrCore/: .GitInfo.cmd  CMakeLists.txt  ChooseTypes.H  Coder.hpp  ELocatorAPI.cpp  ELocatorAPI.h  Event.hpp  FMesh.cpp  FMesh.hpp  FS.cpp  FS.h  FS_impl.h  FS_internal.h  FTimer.cpp  FTimer.h  FileCRC32.cpp  FileCRC32.h  FileSystem.cpp  FileSystem.h  FileSystem_borland.cpp  FixedMap.h  FixedSet.h  FixedVector.h  ILocatorApi.h  LocatorAPI.cpp  (+162 more)
(+33075 files in other folders)
